--- a/server-configs/proxied/post-cert.conf
+++ b/server-configs/proxied/post-cert.conf
@@ -28,6 +28,7 @@ server {
 		proxy_set_header Access-Control-Allow-Credentials true;
 		proxy_set_header Access-Control-Allow-Methods GET,POST,PUT,OPTIONS;
 		add_header Access-Control-Allow-Headers 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
+		proxy_pass_header Access-Control-Allow-Headers;
 
 		proxy_pass http://api;
 
