--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -5,8 +5,8 @@ map $http_origin $allow_origin {
 }
 
 upstream api {
-    server http://api-server:8080;
-	server https://${PROXIED_1}; 
+    server api-server:8080;
+	server ${PROXIED_1}; 
 	# server ${PROXIED_2};
 }
 
@@ -30,7 +30,7 @@ server {
 		add_header Access-Control-Allow-Headers 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
 		proxy_pass_header Access-Control-Allow-Headers;
 
-		proxy_pass api;
+		proxy_pass $scheme://api;
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection 'upgrade';
