--- a/server-configs/proxied/post-cert.conf
+++ b/server-configs/proxied/post-cert.conf
@@ -14,6 +14,7 @@ server {
 	
 	listen [::]:443 ssl;
     listen 443 ssl;
+	listen 80;
 
     ssl_certificate /etc/letsencrypt/live/${SERVER_NAME}/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/${SERVER_NAME}/privkey.pem;
@@ -52,23 +53,23 @@ server {
 
 }
 
-server {	
+# server {	
 	
-	listen 80;
-	listen [::]:80;
+# 	listen 80;
+# 	listen [::]:80;
 
-    location / {
-		add_header Access-Control-Allow-Origin $allow_origin;
-		add_header Access-Control-Allow-Credentials true;
-		add_header Access-Control-Allow-Methods GET,POST,PUT,OPTIONS;
-		add_header Access-Control-Allow-Headers 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
-        return 204 https://$host$request_uri/;
-    }
+#     location / {
+# 		add_header Access-Control-Allow-Origin $allow_origin;
+# 		add_header Access-Control-Allow-Credentials true;
+# 		add_header Access-Control-Allow-Methods GET,POST,PUT,OPTIONS;
+# 		add_header Access-Control-Allow-Headers 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
+#         return 204 https://$host$request_uri/;
+#     }
 
-	location /.well-known/acme-challenge/ {
-		root /var/www/certbot;
-	}
+# 	location /.well-known/acme-challenge/ {
+# 		root /var/www/certbot;
+# 	}
 
-	server_name ${SERVER_NAME};
+# 	server_name ${SERVER_NAME};
 
-}
+# }
