--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -9,40 +9,40 @@ upstream non-local {
 }
 
 
-server {    
-	listen [::]:443 ssl;
-    listen 443 ssl;
+# server {    
+# 	listen [::]:443 ssl;
+#     listen 443 ssl;
 
-    ssl_certificate /etc/letsencrypt/live/ec2api.flow-issue-tracker.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/ec2api.flow-issue-tracker.com/privkey.pem;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+#     ssl_certificate /etc/letsencrypt/live/ec2api.flow-issue-tracker.com/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/ec2api.flow-issue-tracker.com/privkey.pem;
+#     include /etc/letsencrypt/options-ssl-nginx.conf;
+#     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-	server_name ec2api.flow-issue-tracker.com;
+# 	server_name ec2api.flow-issue-tracker.com;
 
-	location / {
+# 	location / {
 		
-		proxy_pass http://local;
+# 		proxy_pass http://local;
 
-		proxy_http_version 1.1;
-		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_header Connection 'upgrade';
-		proxy_set_header Host $host;
-		proxy_cache_bypass $http_upgrade;
+# 		proxy_http_version 1.1;
+# 		proxy_set_header Upgrade $http_upgrade;
+# 		proxy_set_header Connection 'upgrade';
+# 		proxy_set_header Host $host;
+# 		proxy_cache_bypass $http_upgrade;
 
-		proxy_set_header X-Forwarded-Proto $scheme;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header Cookie $http_cookie;
-		proxy_set_header  Authorization $http_authorization;
-		proxy_pass_header Authorization;
+# 		proxy_set_header X-Forwarded-Proto $scheme;
+# 		proxy_set_header X-Real-IP $remote_addr;
+# 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+# 		proxy_set_header Cookie $http_cookie;
+# 		proxy_set_header  Authorization $http_authorization;
+# 		proxy_pass_header Authorization;
 
-		chunked_transfer_encoding off;
-		proxy_buffering off;
-		proxy_cache off;
-	}
+# 		chunked_transfer_encoding off;
+# 		proxy_buffering off;
+# 		proxy_cache off;
+# 	}
 
-}
+# }
 
 
 server {    
