--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -1,6 +1,6 @@
 
-upstream non-local {
-	server ${PROXIED_1}:443; 
+upstream api-server {
+	server ${PROXIED_1}:443;
 	server ${PROXIED_2}:443;
 }
 
@@ -17,43 +17,7 @@ server {
 	server_name ec2api.flow-issue-tracker.com;
 
 	location / {
-		
-		proxy_pass https://non-local;
-
-		proxy_http_version 1.1;
-		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_header Connection 'upgrade';
-		proxy_set_header Host $host;
-		proxy_cache_bypass $http_upgrade;
-
-		proxy_set_header X-Forwarded-Proto $scheme;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header Cookie $http_cookie;
-		proxy_set_header  Authorization $http_authorization;
-		proxy_pass_header Authorization;
-
-		chunked_transfer_encoding off;
-		proxy_buffering off;
-		proxy_cache off;
+		proxy_pass https://api-server;
 	}
-
-}
-
-
-server {	
-	
-	listen 80;
-	listen [::]:80;
-
-    location / {
-        return 301 https://$host$request_uri;
-    }
-
-	location /.well-known/acme-challenge/ {
-		root /var/www/certbot;
-	}
-
-	server_name ec2api.flow-issue-tracker.com;
 
 }
