--- a/server-configs/proxied/post-cert.conf
+++ b/server-configs/proxied/post-cert.conf
@@ -5,13 +5,8 @@ upstream api {
 
 server {    
 	
-	listen [::]:443 ssl;
-    listen 443 ssl;
-
-    ssl_certificate /etc/letsencrypt/live/${SERVER_NAME}/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/${SERVER_NAME}/privkey.pem;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+	listen 80;
+	listen [::]:80;
 
 
 	server_name ${SERVER_NAME};
@@ -40,19 +35,19 @@ server {
 
 }
 
-server {	
+# server {	
 	
-	listen 80;
-	listen [::]:80;
+# 	listen 80;
+# 	listen [::]:80;
 
-    location / {
-        return 301 https://$host$request_uri/;
-    }
+#     location / {
+#         return 301 https://$host$request_uri/;
+#     }
 
-	location /.well-known/acme-challenge/ {
-		root /var/www/certbot;
-	}
+# 	location /.well-known/acme-challenge/ {
+# 		root /var/www/certbot;
+# 	}
 
-	server_name ${SERVER_NAME};
+# 	server_name ${SERVER_NAME};
 
-}
+# }
