--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -1,7 +1,7 @@
 
 upstream loopback {
-	127.0.0.1:8081;
-	127.0.0.1:8082;
+	server 127.0.0.1:8081;
+	server 127.0.0.1:8082;
 }
 
 upstream local-server {
