--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -28,6 +28,20 @@ server {
 	location / {
 		proxy_pass http://loopback;
 		proxy_next_upstream error timeout http_404 http_403;
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection 'upgrade';
+		proxy_set_header Host $host;
+		proxy_cache_bypass $http_upgrade;
+
+		proxy_set_header X-Forwarded-Proto $scheme;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header Cookie $http_cookie;
+
+		chunked_transfer_encoding off;
+		proxy_buffering off;
+		proxy_cache off;
 	}
 }
 
