--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -90,6 +90,30 @@ server {
     }
 	keepalive_timeout 3;
 	proxy_buffering off;
+	gzip on;
+    gzip_disable "MSIE [1-6]\.";
+    gzip_proxied expired no-cache no-store private auth;
+    gzip_comp_level 9;
+    gzip_min_length 500; # Reminder: Default 20
+    gzip_types 
+	text/html
+	text/css
+	text/javascript
+	text/xml
+	text/plain
+	text/x-component
+	application/javascript
+	application/json
+	application/xml
+	application/rss+xml
+	font/truetype
+	font/opentype
+	application/vnd.ms-fontobject
+	image/svg+xml;
+    proxy_connect_timeout       300;
+    proxy_send_timeout          300;
+    proxy_read_timeout          300;
+    send_timeout                300;
 }
 
 # server {    
