--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -94,26 +94,25 @@ server {
     gzip_disable "MSIE [1-6]\.";
     gzip_proxied expired no-cache no-store private auth;
     gzip_comp_level 9;
-    gzip_min_length 500; # Reminder: Default 20
+    gzip_min_length 20; # Reminder: Default 20
     gzip_types 
 	text/html
-	text/css
-	text/javascript
 	text/xml
 	text/plain
 	text/x-component
-	application/javascript
 	application/json
 	application/xml
 	application/rss+xml
-	font/truetype
-	font/opentype
-	application/vnd.ms-fontobject
-	image/svg+xml;
     proxy_connect_timeout       300;
     proxy_send_timeout          300;
     proxy_read_timeout          300;
     send_timeout                300;
+	proxy_intercept_errors off;
+	proxy_buffers           32 4m;
+	proxy_busy_buffers_size     25m;
+	proxy_buffer_size 512k;
+	client_max_body_size        1024m;
+	client_body_buffer_size     4m;
 }
 
 # server {    
