--- a/server-configs/proxied/pre-cert.conf
+++ b/server-configs/proxied/pre-cert.conf
@@ -1,17 +1,45 @@
-server {	
+upstream api {
+	server api-server:8080;
+}
+
+
+server {    
 	
-	listen 80;
-	listen [::]:80;
+	listen [::]:443 ssl;
+    listen 443 ssl;
 
-    location / {
-        return 301 https://$host$request_uri;
-    }
+    ssl_certificate /etc/letsencrypt/live/${SERVER_NAME}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${SERVER_NAME}/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-	location /.well-known/acme-challenge/ {
-		root /var/www/certbot;
-	}
 
 	server_name ${SERVER_NAME};
 
-}
+	location / {
 
+		proxy_pass http://api;
+
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade '';
+		proxy_set_header Connection '';
+		proxy_set_header Host $host;
+		proxy_cache_bypass $http_upgrade;
+
+
+		proxy_set_header X-Forwarded-Proto $scheme;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header Cookie $http_cookie;
+
+		chunked_transfer_encoding off;
+		proxy_buffering off;
+		proxy_cache off;
+
+	}
+
+	# keepalive_timeout 3;
+	# proxy_buffering off;
+
+
+}
