--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -49,10 +49,14 @@ server {
 	listen 80;
 	listen [::]:80;
 
+    location / {
+        return 301 https://$host$request_uri;
+    }
+
 	location /.well-known/acme-challenge/ {
 		root /var/www/certbot;
 	}
 
-	server_name ${SERVER_NAME};
+	server_name ec2api.flow-issue-tracker.com;
 
 }
