--- a/.github/workflows/cd-server-proxied.yml
+++ b/.github/workflows/cd-server-proxied.yml
@@ -23,7 +23,7 @@ jobs:
 
     steps:
     - run: |
-        sudo rm -rf server-configs/proxied
+        sudo rm -rf /Issue-Tracker/server-configs/proxied
     - uses: actions/checkout@v4
       with:
         sparse-checkout: |
