--- a/.github/workflows/ci-server.yml
+++ b/.github/workflows/ci-server.yml
@@ -34,12 +34,15 @@ jobs:
           PROXIED_1, 
           PROXIED_2
           ]
-
+    
     runs-on:
       - self-hosted
       - ${{ matrix.runner }}
       
     steps:
+    - run: |
+        sudo rm -rf /Issue-Tracker/server-configs/proxied
+        sudo rm -rf /Issue-Tracker/server-configs/root-server
     - uses: actions/checkout@v4
       with:
         sparse-checkout:
