--- a/.github/workflows/cd-server-proxied.yml
+++ b/.github/workflows/cd-server-proxied.yml
@@ -24,6 +24,7 @@ jobs:
     steps:
     - run: |
         sudo su
+        sudo -S
         ls
         sudo rm -rf /Issue-Tracker/server-configs/proxied
     - uses: actions/checkout@v4
