--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -54,9 +54,9 @@ server {
     }
 
 	location /.well-known/acme-challenge/ {
-		root /var/www/certbot;
+		allow all;
 	}
-
+	root /var/www/certbot;
 	server_name ec2api.flow-issue-tracker.com;
 
 }
