--- a/.github/workflows/cd-server-root.yml
+++ b/.github/workflows/cd-server-root.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - run: |
         ls
-        sudo chown -R $USER Issue-Tracker
+        sudo chown -R $USER .
     - uses: actions/checkout@v4
       with:
         sparse-checkout: |
