--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -3,44 +3,42 @@ upstream api {
 }
 
 
-server {    
+# server {    
 	
-	listen [::]:443 ssl;
-    listen 443 ssl;
+# 	listen [::]:443 ssl;
+#     listen 443 ssl;
 
-    # ssl_certificate /etc/ssl/certs/flow-cert.pem;
-    # ssl_certificate_key etc/ssl/private/flow-key.pem;
+#     # ssl_certificate /etc/ssl/certs/flow-cert.pem;
+#     # ssl_certificate_key etc/ssl/private/flow-key.pem;
 
+# 	server_name ${SERVER_NAME};
 
-	server_name ${SERVER_NAME};
+# 	location / {
 
-	location / {
+# 		proxy_pass http://api;
 
-		proxy_pass http://api;
-
-		proxy_http_version 1.1;
-		proxy_set_header Upgrade '';
-		proxy_set_header Connection '';
-		proxy_set_header Host $host;
-		proxy_cache_bypass $http_upgrade;
-
-
-		proxy_set_header X-Forwarded-Proto $scheme;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header Cookie $http_cookie;
-
-		chunked_transfer_encoding off;
-		proxy_buffering off;
-		proxy_cache off;
-
-	}
-
-	# keepalive_timeout 3;
-	# proxy_buffering off;
+# 		proxy_http_version 1.1;
+# 		proxy_set_header Upgrade '';
+# 		proxy_set_header Connection '';
+# 		proxy_set_header Host $host;
+# 		proxy_cache_bypass $http_upgrade;
 
 
-}
+# 		proxy_set_header X-Forwarded-Proto $scheme;
+# 		proxy_set_header X-Real-IP $remote_addr;
+# 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+# 		proxy_set_header Cookie $http_cookie;
+
+# 		chunked_transfer_encoding off;
+# 		proxy_buffering off;
+# 		proxy_cache off;
+
+# 	}
+
+# 	# keepalive_timeout 3;
+# 	# proxy_buffering off;
+
+# }
 
 server {	
 	
