--- a/.github/workflows/ci-server.yml
+++ b/.github/workflows/ci-server.yml
@@ -7,7 +7,7 @@ on:
 jobs:
 
   check-changes:
-    runs-on: [self-hosted, root-server-runner] 
+    runs-on: [self-hosted, SERVER_1] 
     # Set job outputs to values from filter step
     outputs:
       backend: ${{ steps.filter.outputs.backend }}
@@ -31,7 +31,7 @@ jobs:
     strategy:
       matrix:
         runner: [
-          root-server-runner-2, 
+          SERVER-1-RUNNER-2, 
           # PROXIED_1, 
           # PROXIED_2
           ]
